Popravljeni i dovrseni Inventory Menu i MenuItem